--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   provider: ^6.1.5+1
   firebase_core: ^4.1.0
   cloud_firestore: ^6.0.1
+  firebase_auth: ^6.1.0
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_test:
